add Docs service to serve GET "/api/openapi.yaml", GET "/api/openapi3.yaml"
